<resources>
    <string name="app_name">InLine</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>

    <string name="map">Карта</string>
    <string name="your_roads">Ваши маршруты</string>
    <string name="friends_roads">Маршруты</string>
    <string name="friends_GPS">Друзья</string>
    <string name="title_activity_maps">События рядом с вами</string>
    <string name="title_activity_trains">Стили для тренировок</string>
    <string name="trainings">Тренировки</string>
    <string name="type1">Slalom</string>
    <string name="type2">Slide</string>
    <string name="type3">Jump</string>
    <string name="type4">Aggressiv</string>
    <string name="button_back">Back</string>

    <string name="links_on_cities">Группы роллеров</string>
    <string name="your_account">Ваш аккаунт</string>
    <string name="settings">Настройки</string>
</resources>